Tue Apr 17 15:42:59 UTC 2007  Ciju John  <johnc at ociweb dot com>

        * dds/InfoRepo/DCPSInfo_i.cpp:
        * dds/InfoRepo/DCPS_IR_Participant.cpp:
        * dds/InfoRepo/PersistenceUpdater.h:
        * dds/InfoRepo/PersistenceUpdater.cpp:
        * dds/InfoRepo/UpdateManager.h:
        * dds/InfoRepo/UpdateManager.cpp:
        * dds/InfoRepo/Updater.h:
          Modified remove entity API to indicate entity type to be
          removed. Entities of different types (Topic, Participant, Actor)
          can have the same Id.

Mon Apr 16 20:51:19 UTC 2007  Ciju John  <johnc at ociweb dot com>

        * tests/DCPS/Prst_delayed_subscriber/run_test.pl:
	  Modify timeouts to account for slower machines.

Mon Apr 16 16:05:44 UTC 2007  Ciju John  <johnc at ociweb dot com>

        * docs:
        * docs/README_InfoRepo_Persistence:
	  Document the DCPS InfoRepo persistence API & mechanism.

Fri Apr 13 20:54:05 UTC 2007  Ciju John  <johnc at ociweb dot com>

        Cumulative modifications to add persistence in the DCPS InfoRepo.

        * dds/InfoRepo/ArrDelAdapter.h:
	  Custom auto_ptr for dealing with arrays.

        * dds/InfoRepo/DCPSInfoRepo.cpp:
          Add command line option '-reincarnate' to control restart
          state. Delay POA manager activation, so that requests cannot be
          processed unless InfoRepo is fully initialized.

        * dds/InfoRepo/DCPSInfo_i.h:
        * dds/InfoRepo/DCPSInfo_i.cpp:
        * dds/InfoRepo/DCPS_IR_Domain.h:
        * dds/InfoRepo/DCPS_IR_Domain.cpp:
        * dds/InfoRepo/DCPS_IR_Participant.h:
        * dds/InfoRepo/DCPS_IR_Participant.cpp:
        * dds/InfoRepo/DCPS_IR_Topic.h:
        * dds/InfoRepo/DCPS_IR_Topic.cpp:
        * dds/InfoRepo/DCPS_IR_Topic_Description.h:
        * dds/InfoRepo/DCPS_IR_Topic_Description.cpp:
          Add API for underlying persistence layers to modify InfoRepo
          state.

        * dds/InfoRepo/DCPS_Entity_Id_Generator.h: